--- a/Module - 1 - Bootstrap 5/Exercise - 19 - Customization with Saas/custom.css
+++ b/Module - 1 - Bootstrap 5/Exercise - 19 - Customization with Saas/custom.css
@@ -1,9 +1,10 @@
-@charset "UTF-8";
+/*@charset "UTF-8";
 /*!
  * Bootstrap  v5.3.6 (https://getbootstrap.com/)
  * Copyright 2011-2025 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+/*
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11854,5 +11855,5 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-
+*/
 /*# sourceMappingURL=custom.css.map */
